<resources>
    <string name="app_name">Star Mart Grocery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android/studio/com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="welcome_to_starmart_grocery_app">Welcome to StarMart Grocery App</string>
    <string name="explore_us">Explore Us</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="settings">Settings</string>
    <string name="view_all">View All</string>
    <string name="popular_products">Popular Products</string>
    <string name="explore_products">Explore Products</string>
    <string name="recommended">Recommended</string>
    <string name="total_price">Total Price</string>
    <string name="products">Products :</string>
    <string name="order_details">Order Details</string>
    <string name="number_of_products">Number of Products :</string>
    <string name="date">Date:</string>
    <string name="order_pending">Order:Pending</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="search_your_item_here">Search your item here..</string>
    <string name="popularproducts">Popular products</string>
    <string name="viewall">View All</string>
    <string name="update">Update</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_address">Your Address</string>
    <string name="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>