<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription=""
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck" />

    <EditText
        android:id="@+id/profile_name"
        android:layout_width="307dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:padding="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="ExtraText,TextContrastCheck" />

    <EditText
        android:id="@+id/profile_email"
        android:layout_width="307dp"
        android:layout_height="56dp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintVertical_bias="0.06"
        app:layout_constraintWidth_percent=".8"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/account"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        android:padding="13dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name" />

    <EditText
        android:id="@+id/profile_number"
        android:layout_width="307dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/ic_baseline_local_phone_24"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="13dp"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_email"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/profile_address"
        android:layout_width="307dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toTopOf="@+id/update"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".8"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/ic_baseline_location_on_24"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/your_address"
        android:importantForAutofill="no"
        android:inputType=""
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_number"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/update"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.315"
        android:layout_marginBottom="132dp"
        android:padding="14dp"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_address" />

</androidx.constraintlayout.widget.ConstraintLayout>