<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F1F1"
    tools:context=".ui.home.HomeFragment">

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/search_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="13dp"
                android:autofillHints=""
                android:background="@drawable/search_gb"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:drawablePadding="5dp"
                android:elevation="3dp"
                android:hint="@string/search_your_item_here"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                android:inputType="" />
            <LinearLayout
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/popularproducts"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

            <TextView
                android:id="@+id/view_all_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:fontFamily="@font/aclonica"
                android:gravity="end"
                android:text="@string/viewall"
                android:textSize="14sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/pop_rec" />

            <LinearLayout
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/aclonica"
                    android:text="Explore products"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/view_all_explore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/aclonica"
                    android:gravity="end"
                    android:text="View All"
                    android:textSize="14sp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/explore_rec" />

            <LinearLayout
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/recommended"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/view_all_recommended"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/aclonica"
                    android:gravity="end"
                    android:text="View all"
                    android:textSize="14sp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/recommended_rec" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>